@@ -9,11 +9,16 @@
 #define EQUALS(l, i) (!strcmp((l), (i)))
 #define ISINST(l, i) (!strncmp((l), (i), sizeof(i) - 1))
 
+static struct
+{
+  lineNode *head;
+} _G;
+
 static int
 readint(const char *str)
 {
   int ret;
-  if(str[0] == '#' || str[0] == '(')
+  while(str[0] == '#' || str[0] == '(')
     str++;
   if(sscanf(str, "0x%x", &ret))
     return(ret);
@@ -26,7 +31,7 @@ readint(const char *str)
 }
 
 static int
-isreg(const char *what)
+isReg(const char *what)
 {
   if(what[0] == '(')
     what++;
@@ -41,9 +46,17 @@ static char *
 nextToken(char *p)
 {
   /* strtok replacement */
-  static char *str, *ret;
-  if(p)
-    str = p;
+  static char *str, *ret, *end;
+  // Use an internal buffer to prevent *p from being modified
+  static char buf[128];
+  if(p) {
+    strncpy(buf, p, sizeof(buf));
+    buf[sizeof(buf)-1] = '\0';
+    str = buf;
+    end = buf + strlen(p);
+  }
+  if(str >= end)
+    return(NULL);
   ret = str;
   // Strip separators
   while(*str == ',' || isspace(*str))
@@ -74,6 +87,18 @@ isRelativeAddr(char *what, const char *mode)
 }
 
 static int
+isLabel(char *what)
+{
+  char *end;	
+  end = strchr(what, '+');
+  if(!end)
+    end = what + strlen(what);
+  if(what[0] == '#')
+    return (what[1] == '_' || what[1] == '<' || what[1] == '>');
+  return(what[0] == '_' || *(end-1) == '$');
+}
+
+static int
 isImmediate(char *what)
 {
   return(what[0] == '#');
@@ -101,14 +126,11 @@ isSpIndexed(char *what)
 int
 stm8instructionSize(lineNode *pl)
 {
-  char buf[32];
   char *operand;
   char *op1start;
   char *op2start;
   int i = 0;
-  strncpy(buf, pl->line, 32);
-  buf[31] = 0;
-  operand = nextToken(buf);
+  operand = nextToken(pl->line);
   op1start = nextToken(NULL);
   op2start = nextToken(NULL);
   //fprintf(stderr, "op1start=%s op2start=%s\n", op1start, op2start);
@@ -129,10 +151,14 @@ stm8instructionSize(lineNode *pl)
       return(3);
     if(op1start[0] == 'a' || op1start[1] == 'x')
       return(1);
+    if(op1start[1] == 'y')
+      return(2);
     if(op1start[0] == '(')
       op1start++;
     if(strstr(op1start, ",y)"))
       i++; // costs extra byte for operating with y
+    if(isLabel(op1start))
+      return(3);
     if(readint(op1start) <= 0xFF)
       return(2+i);
     /* op1 > 0xFF */
@@ -142,7 +168,7 @@ stm8instructionSize(lineNode *pl)
   }
   if(EQUALS(operand, "exg"))
   {
-    if(isreg(op2start))
+    if(isReg(op2start))
       return(1);
     else
       return(3);
@@ -201,6 +227,8 @@ stm8instructionSize(lineNode *pl)
       return(1);
     if(!strcmp(op1start, "(y)") || !strcmp(op2start, "(y)"))
       return(2);
+    if(isLabel(op1start) || isLabel(op2start))
+      return(3+i);
     if(isShortoff(op1start, "x") || isShortoff(op2start, "x"))
       return(2);
     if(isShortoff(op1start, "y") || isShortoff(op2start, "y"))
@@ -211,7 +239,7 @@ stm8instructionSize(lineNode *pl)
       return(4);
     if(strchr(op1start, 'y') || (strchr(op2start, 'y') && !EQUALS(operand, "ldw")))
       i++; // costs extra byte for operating with y
-    if(isreg(op1start) && isreg(op2start))
+    if(isReg(op1start) && isReg(op2start))
       return(1+i);
     if(op2start[0] == '#')
       return(2+i); // ld reg, #immd
@@ -224,6 +252,8 @@ stm8instructionSize(lineNode *pl)
   if(EQUALS(operand, "mov")) {
     if(op2start && op2start[0] == '#')
       return(4);
+    if(op2start && isLabel(op2start))
+      return(5);
     if(op2start && readint(op2start) <= 0xFF)
       return(3);
     if(op2start && readint(op2start) > 0xFF)
@@ -271,4 +301,87 @@ stm8instructionSize(lineNode *pl)
       return(1);
   }
   return(4);
+}
+
+static bool
+doTermScan (lineNode **pl, const char *what)
+{
+  char *operand, *op1start, *op2start;
+  for (; *pl; *pl = (*pl)->next)
+  {
+    operand = nextToken((*pl)->line);
+    if(! (op1start = nextToken(NULL)) )
+      continue;
+
+    if(EQUALS(operand, "ld")
+                || EQUALS(operand, "mov")
+                || EQUALS(operand, "clr"))
+      return(EQUALS(op1start, what));
+
+    if(EQUALS(op1start, what))
+      return(FALSE);
+
+    if(op2start && EQUALS(op2start, what))
+      return(FALSE);
+
+    if(EQUALS(operand, "ret") || EQUALS(operand, "iret"))
+      return(FALSE);
+
+    /* TODO */
+    if(ISINST(operand, "jp"))
+      return(FALSE);
+
+    if(ISINST(operand, "call"))
+      return(FALSE);
+  }
+  return(FALSE);
+}
+
+/*-----------------------------------------------------------------*/
+/* univisitLines - clear "visited" flag in all lines               */
+/*-----------------------------------------------------------------*/
+static void
+unvisitLines (lineNode *pl)
+{
+  for (; pl; pl = pl->next)
+    pl->visited = FALSE;
+}
+
+bool
+stm8notUsed (const char *what, lineNode *endPl, lineNode *head)
+{
+  lineNode *pl;
+  if(strcmp(what, "x") == 0)
+    return(stm8notUsed("xl", endPl, head) && stm8notUsed("xh", endPl, head));
+  if(strcmp(what, "y") == 0)
+    return(stm8notUsed("yl", endPl, head) && stm8notUsed("yh", endPl, head));
+
+  if(!isReg(what))
+    return FALSE;
+
+  _G.head = head;
+
+  unvisitLines (_G.head);
+
+  pl = endPl->next;
+  return (doTermScan (&pl, what));
+}
+
+/* can be directly assigned with ld */
+bool
+stm8canAssign (const char *op1, const char *op2, const char *exotic)
+{
+  //fprintf(stderr, "op1=%s op2=%s exotic=%s\n", op1, op2, exotic);
+  char *reg, *payload;
+  reg = op1[0] == 'a' ? op1 : op2;
+  payload = reg == op1 ? op2 : op1;
+  if(isRelativeAddr(payload, "x")
+                || isRelativeAddr(payload, "y")
+                || isRelativeAddr(payload, "sp")
+                || !strcmp(payload, "(x)")
+                || !strcmp(payload, "(y)")
+                || !strcmp(payload, "xl")
+                || !strcmp(payload, "xh"))
+    return(reg[0] == 'a');
+  return(FALSE);
 }
