@@ -1,14 +1,14 @@
 // peeph.def - STM8 peephole rules
 
-//replace restart {
-//	jrc	%1
-//	jp	%5
-//%1:
-//} by {
-//	jrnc	%5
-//	; peephole 1 removed jp by using inverse jump logic
-//%1:
-//} if labelInRange(), labelRefCountChange(%1 -1)
+replace restart {
+	jrc	%1
+	jp	%5
+%1:
+} by {
+	jrnc	%5
+	; peephole 1 removed jp by using inverse jump logic
+%1:
+} if labelInRange(), labelRefCountChange(%1 -1)
 
 //replace restart {
 //	jreq	%1
@@ -19,7 +19,7 @@
 //	; peephole 2 removed jp by using inverse jump logic
 //%1:
 //} if labelInRange(), labelRefCountChange(%1 -1)
-
+//
 //replace restart {
 //	jrmi	%1
 //	jp	%5
@@ -29,6 +29,14 @@
 //	; peephole 3 removed jp by using inverse jump logic
 //%1:
 //} if labelInRange(), labelRefCountChange(%1 -1)
+
+replace restart {
+	ld	%1, %2
+	ld	%3, %1
+} by {
+	; peephole 9 loaded %3 from %2 directly instead of going through %1.
+	ld	%3, %2
+} if canAssign(%3 %2), notVolatile(%1), notUsed(%1)
 
 //replace restart {
 //	jrnc	%1
